[package]
name = "rusthesia"
version = "0.1.20"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
edition = "2018"
license = "MIT"
description = "Reads midi files and create piano notes waterfall."
homepage = "https://github.com/gin66/rusthesia"
repository = "https://github.com/gin66/rusthesia"
keywords = ["music", "midi", "piano", "learning", "sdl2"]
readme = "README.md"
documentation = "https://docs.rs/releases/search?query=rusthesia"

[dependencies]
midir = "0.5"
midly = "0.4"
clap = "2.32"
indoc = "0.3"
font-kit = "0.5"
piano_keyboard = "0.2"
sdl2_timing = "0.2"

# Dependencies for hacked stderrlog
chrono = "0.4"
termcolor = "1.1"
thread_local = "1.0"

[dependencies.sdl2]
version = "0.33"
default-features = false
features = ["gfx","ttf"]

[dependencies.log]
version = "0.4"
features = ["std"]

