[package]
name = "sdl2_timing"
version = "0.1.0"
authors = ["Jochen Kiemes <jochen@kiemes.de>"]
edition = "2018"
license = "MIT"
description = "Reads midi files and create piano notes waterfall."
homepage = "https://github.com/gin66/rusthesia"
repository = "https://github.com/gin66/rusthesia"
keywords = ["music", "midi", "piano", "learning", "sdl2"]
readme = "README.md"
documentation = "https://docs.rs/releases/search?query=rusthesia"

[dependencies]

[dependencies.sdl2]
version = "0.31"
default-features = false
features = ["gfx","ttf"]

[dependencies.log]
version = "0.4"
features = ["std"]

